# solana-client-async

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: block_subscribe.rs  slot_subscribe.rs  slot_subscribe_raw.rs  subscribe_slot.rs  subscribe_slot_raw.rs
src/: background.rs  client.rs  errors.rs  lib.rs  rpc_message.rs
tests/: account_subscribe.rs  logs_subscribe.rs  program_subscribe.rs  slot_subscribe.rs  slot_unsubscribe.rs
