[package]
edition = "2021"
name = "solana-client-async"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fehler = "1"
futures = "0.3"
log = "0.4"
serde = "1"
serde_json = {version = "1", features = ["raw_value"]}
solana-client = "1"
solana-sdk = "1"
thiserror = "1"
tokio = "1"
tokio-tungstenite = {version = "0.16", features = ["native-tls"]}
tungstenite = "0.16"

[dev-dependencies]
[features]
cli = []
